调整底部菜单

--- a/template/default/wap/index_index.html
+++ b/template/default/wap/index_index.html
@@ -19,9 +19,11 @@
   <link rel="stylesheet" href="__PUBLIC__/css/yunu.css">
   <link rel="stylesheet" href="__PUBLIC__/css/ylyy.css">
   <link rel="stylesheet" href="__PUBLIC__/css/swiper.min.css">
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_1343574_hd53i68obnq.css">
   <script type="text/javascript" src="__PUBLIC__/js/yunu.js"></script>
   <script type="text/javascript" src="__PUBLIC__/js/Superslide.js"></script>
   <script type="text/javascript" src="__PUBLIC__/js/swiper.min.js"></script>
+
 </head>
 
 <body>
