--- a/template/default/wap/css/ylyy.css
+++ b/template/default/wap/css/ylyy.css
@@ -79,39 +79,20 @@
 
 /* 首页底部 */
 
-.footer .col {
-    float: left;
-    color: #fff;
-    margin-top: 50px;
-}
-.footer .col1 {
-    width: 230px;
-}
-.footer .col2 {
-    width: 470px;
-}
-.footer .col li {
-    font-size: 14px;
-    list-style: none;
-    height: 35px;
-    line-height: 35px;
-}
-.footer .col p {
-    font-size: 14px;
-    list-style: none;
-    height: 35px;
-    line-height: 35px;
-}
-.footer .foot3 .inner {
-    border-top: 1px solid #eee;
-    padding-top: 20px;
-    color: #fff;
-    font-size: 12px;
-    box-sizing: border-box;
-}
-.footer .ewm img {
-    width: 100px;
-    padding: 4px;
+.sun_footer {
+    position: fixed;
+    z-index: 999;
+    bottom: 0;
+    width: 100%;
     background: #fff;
-    display: block;
+    border-top: 1px solid #DBDBDB;
+}
+.sun_footer li {
+    width: 20%;
+    text-align: center;
+    float: left;
+    padding-top: 5px;
+}
+.sun_footer .iconfont{
+font-size: 2em;
 }
