--- a/template/default/index/css/yunu.css
+++ b/template/default/index/css/yunu.css
@@ -46,7 +46,9 @@
 .content_box *:after {
   box-sizing: content-box;
 }
-
+.tac{
+  text-align: center;
+}
 .ml5 {
   margin-left: 5px;
 }
@@ -1847,6 +1849,8 @@ textarea {
 body {
   max-width: 1920px;
   margin: 0 auto;
+  background-color: #f5efde;
+
 }
 
 .center {
@@ -1857,7 +1861,7 @@ body {
 .header {
   width: 100%;
   height: 160px;
-  background: url(../img/headbg.jpg) no-repeat;
+  /* background: url(../img/headbg.jpg) no-repeat; */
 }
 
 .header .head_top_content {
@@ -1872,33 +1876,34 @@ body {
 
 .header .head_top_content .head_logo img {
   display: block;
-  width: 64px;
+  height: 64px;
   float: left;
 }
 
 .header .head_top_content .head_logo .head_tit {
   margin-left: 10px;
-  padding-right: 20px;
+  padding: 12px 20px 0 0;
   border-right: 1px dotted #028BCF;
+  height: 64px;
 }
 
 .header .head_top_content .head_logo .head_tit h4 {
-  color: #036aac;
+  color: #000;
   font-size: 26px;
   line-height: 25px;
 }
 
 .header .head_top_content .head_logo .head_tit h6 {
-  color: #1c4587;
+  color: #000;
   font-size: 15px;
   line-height: 25px;
   font-weight: normal;
 }
 
 .header .head_top_content .head_logo .head_text {
-  height: 50px;
-  padding-left: 20px;
-  border-left: 1px dotted #028BCF;
+  height: 64px;
+  padding: 12px 0 0 20px;
+  border-left: 1px dotted #000;
 }
 
 .header .head_top_content .head_logo .head_text p {
@@ -1960,16 +1965,18 @@ body {
 }
 
 .header .head_nav ul li > a {
-  color: #fff;
+  color: #666666;
+  margin: 0 12px;
   font-size: 16px;
   line-height: 43px;
+  height: 41px;
   text-align: center;
   display: block;
 }
 
 .header .head_nav ul li.on > a {
-  background: #FF9900;
-  color: #fff;
+  /* background: #FF9900; */
+  color: #ae3523;
 }
 
 .header .head_nav ul li .v_list {
@@ -1993,13 +2000,14 @@ body {
 }
 
 .header .head_nav ul li .v_list a:hover {
-  background: #FF9900;
-  color: #fff;
+  border-bottom: 2px solid #ae3523;
+  color: #ae3523;
 }
 
 .header .head_nav ul li:hover > a {
-  background: #FF9900;
-  color: #fff;
+  color: #ae3523;
+  border-bottom: 2px solid #ae3523;
+
 }
 
 .pc_banner {
@@ -2483,48 +2491,36 @@ body {
   width: 100%;
   padding: 40px 0 50px 0;
   overflow: hidden;
-  background: url(../img/aboutbg.jpg);
+  /* background: url(../img/aboutbg.jpg); */
 }
 
 .i_box2 .i_box2_tit {
-  width: 100%;
-  height: 55px;
   position: relative;
+  padding: 8px;
 }
 
 .i_box2 .i_box2_tit span {
-  width: 100%;
-  height: 1px;
-  display: block;
-  background: #fff;
-  position: absolute;
-  top: 26px;
+  display: inline-block;
 }
 
 .i_box2 .i_box2_tit p {
-  background: url(../img/aboutbg.jpg);
-  width: 260px;
-  padding: 0 10px;
-  position: relative;
-  z-index: 90;
-  margin: 0 auto;
+
 }
 
 .i_box2 .i_box2_tit p i {
-  display: block;
+  display: inline-block;
   font-style: normal;
-  height: 55px;
-  line-height: 55px;
-  font-size: 20px;
+  font-weight: bold;
+  height: 50px;
+  line-height: 50px;
+  font-size: 28px;
   text-align: center;
-  width: 240px;
-  background: url(../img/tit.png) no-repeat;
-  color: #fff;
+  color: #575757;
 }
 
 .i_box2 .i_box2_content .i_box2_content1 {
-  width: 70%;
-  background: url(../img/img2.png) no-repeat right bottom;
+  /* width: 70%;
+  background: url(../img/img2.png) no-repeat right bottom; */
 }
 
 .i_box2 .i_box2_content .i_box2_content1 .flimg {
@@ -2542,6 +2538,8 @@ body {
   width: 45%;
   overflow: hidden;
   margin-left: 4%;
+  padding: 8px;
+  border: 2px solid #ae3523;
 }
 
 .i_box2 .i_box2_content .i_box2_content1 .i_box2_img img {
@@ -2552,12 +2550,17 @@ body {
 .i_box2 .i_box2_content .i_box2_content1 .i_box2_text {
   width: 45%;
   margin-left: 5%;
-  padding: 0;
+  padding: 80px 0 0 0;
   border: none;
+  background-image: url('../img/sample/decorate.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 382px;
 }
 
 .i_box2 .i_box2_content .i_box2_content1 .i_box2_text p {
-  color: #fff;
+  color: #575757;
   font-size: 14px;
   line-height: 200%;
   display: block;
@@ -2565,6 +2568,7 @@ body {
 
 .i_box2 .i_box2_content .i_box2_content1 .i_box2_menu {
   width: 100%;
+  text-align: center;
   padding: 4% 0 0 4%;
 }
 
@@ -2572,10 +2576,10 @@ body {
   width: 107px;
   height: 34px;
   border-radius: 40px;
-  border: 3px solid #fff;
+  border: 3px solid #666666;
   text-align: center;
   line-height: 28px;
-  color: #fff;
+  color: #666666;
   font-size: 16px;
   display: -moz-inline-stack;
   display: inline-block;
@@ -2880,8 +2884,7 @@ body {
   width: 100%;
   overflow: hidden;
   padding: 40px 0;
-  margin-top: 40px;
-  background: url(../img/foot.gif);
+   background: #333333;
 }
 
 .footer .fl {
