--- a/template/default/index/public_footer.html
+++ b/template/default/index/public_footer.html
@@ -1,6 +1,6 @@
     <div class="footer">
       <div class="center ">
-        <div class="inner clearfix">
+        <div class="  clearfix">
           <section class="col col1">
             <h1>网站导航</h1>
             <yunu:nav typeid='1'>
@@ -13,30 +13,32 @@
 
           <section class="col col2">
             <h1>联系我们</h1>
-            <p><span class="icon icon1"></span><span><yunu:block name='dizhi' /></span></p>
-            <p><span class="icon icon2"></span><span style="color:#FFF">024-</span><span style="color:#FFF"><yunu:block name='dianhua' /></span></p>
-            <p><span class="icon icon2"></span><yunu:block name='shouji' /></span></p>
-            <p><span class="icon icon3"></span><span><yunu:block name='email' /></span></p>
+            <p><span class="icon icon1">地址：</span><span><yunu:block name='dizhi' /></span></p>
+            <p><span class="icon icon2">电话：</span><span style="color:#FFF">024-</span><span style="color:#FFF"><yunu:block name='dianhua' /></span></p>
+            <p><span class="icon icon2">手机：</span><yunu:block name='shouji' /></span></p>
+            <p><span class="icon icon3">邮箱：</span><span><yunu:block name='email' /></span></p>
           </section>
 
           <section class="col col3">
-            <div class="contact">
-              <div><img style="max-width:100%; max-height:100%; display:inline;" src="/themes/ruanshan/public/assets/images/qrcode-h5.jpg">
-                <p>订阅h5案例分享,了解更多h5案例的秘密</p>
+            <div class="contact tac">
+              <div class="ewm"><img style="max-width:100%; max-height:100%; display:inline;" src="__PUBLIC__/img/ewm.png">
+                <p>亿霖订阅号</p>
               </div>
               <div class="ewm"><yunu:block name='ewm' />
-                <p>订阅软山官方账号,让软山提供更好的服务</p>
+                <p>亿霖服务号</p>
               </div>
             </div>
           </section>
         </div>
 
-        <div class="foot3">
-          <div class="inner">
-            <yunu:config name="site_copyright" />
-          </div>
-        </div>
 
+
+      </div>
+
+      <div class="foot3">
+        <div class="inner">
+          <yunu:config name="site_copyright" />
+        </div>
       </div>
     </div>
 
