--- a/template/default/wap/css/ylyy.css
+++ b/template/default/wap/css/ylyy.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 10px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 .pc_banner .pcbanner .pagination {
   position: absolute;
   left: 0;
@@ -23,76 +27,356 @@
   background: #036aac;
   width: 12px;
 }
+
 /* 首页公共 */
-.index_title{
+.index_title {
   text-align: center;
   font-size: 18px;
 }
+
 /* 首页新闻 */
 .cl {
-    clear: both;
+  clear: both;
 }
-.index_more{width:30%;border:1px solid #ccc;color:#000;line-height:35px;margin:0 auto;}
-.index_new{width:100%;padding:3% 0;background:#ff9600;}
-.index_news{width:95%;margin:0 auto;}
-.index_new_type{padding:3% 4%;border:1px solid #fff;margin:0 2%;border-radius:1em;color:#fff;}
-.index_news_tem1{color:#fff;}
-.index_news_tem{border-top:1px dashed #fff;padding:10px 0;color:#fff;}
 
-.news_right{position:relative;}
-.index_news_type_tem{margin:0 15px;width:143px;text-align:center;height:35px;font-size:18px;line-height:35px;border:1px solid #fff;border-radius:17px;cursor:pointer;}
-.index_tem{ margin-top:20px; position:relative;}
-.index_tem div{ }
-.no{display:none}
-.act{color:#ff9600;background:#fff;}
-.acts{color:#fff;}
-.index_news_list{ margin:0 auto;}
-.index_news_list a{color:#fff;}
-.index_news_list_tem{ border-top:1px dashed #fff; color:#fff; }
-.index_news_list_tem:first-child{  }
+.index_more {
+  width: 30%;
+  border: 1px solid #ccc;
+  color: #000;
+  line-height: 35px;
+  margin: 0 auto;
+}
+
+.index_new {
+  width: 100%;
+  padding: 3% 0;
+  background: #ff9600;
+}
+
+.index_news {
+  width: 95%;
+  margin: 0 auto;
+}
+
+.index_new_type {
+  padding: 3% 4%;
+  border: 1px solid #fff;
+  margin: 0 2%;
+  border-radius: 1em;
+  color: #fff;
+}
+
+.index_news_tem1 {
+  color: #fff;
+}
+
+.index_news_tem {
+  border-top: 1px dashed #fff;
+  padding: 10px 0;
+  color: #fff;
+}
+
+.news_right {
+  position: relative;
+}
+
+.index_news_type_tem {
+  margin: 0 15px;
+  width: 143px;
+  text-align: center;
+  height: 35px;
+  font-size: 18px;
+  line-height: 35px;
+  border: 1px solid #fff;
+  border-radius: 17px;
+  cursor: pointer;
+}
+
+.index_tem {
+  margin-top: 20px;
+  position: relative;
+}
+
+.index_tem div {}
+
+.no {
+  display: none
+}
+
+.act {
+  color: #ff9600;
+  background: #fff;
+}
+
+.acts {
+  color: #fff;
+}
+
+.index_news_list {
+  margin: 0 auto;
+}
+
+.index_news_list a {
+  color: #fff;
+}
+
+.index_news_list_tem {
+  border-top: 1px dashed #fff;
+  color: #fff;
+}
+
+.index_news_list_tem:first-child {}
+
 /* 首页产品 */
-.index_pr{width:100%; margin:0 auto; background:url(../img/sample/index_pr1.png) no-repeat center top ;}
-.index_prs{ margin:0 auto;}
-.picScroll { position: relative;}
-.picScroll .prev, .picScroll  .next{ position: absolute; display:block;  width:44px; height:44px;  cursor:pointer;  top:50%;}
-.picScroll .prev, { left: 0; }
-.picScroll .next { right: 0; }
+.index_pr {
+  width: 100%;
+  margin: 0 auto;
+  background: url(../img/sample/index_pr1.png) no-repeat center top;
+}
 
-.picScroll-left{ width:100%;  overflow:hidden; position:relative; }
-.picScroll-left .hd{ overflow:hidden;  height:30px; padding:0 10px;  }
-.picScroll-left .hd .prev,.picScroll-left .hd .next{ display:block;float:right; cursor:pointer;width:30px;height:30px}
-.picScroll-left .hd .prev{background:url(../images/left.png);background-size:100% 100%;margin-right:5px;}
-.picScroll-left .hd .next{background:url(../images/right.png);background-size:100% 100%;}
-.picScroll-left .hd ul{ float:right; overflow:hidden; zoom:1; margin-top:10px; zoom:1; }
-.picScroll-left .hd ul li{ float:left;  width:9px; height:9px; overflow:hidden; margin-right:5px; text-indent:-999px; cursor:pointer; background:#fff;border-radius:5px }
-.picScroll-left .hd ul li.on{ background-position:0 0; }
-.picScroll-left .bd{ padding-top:10px;}
-.picScroll-left .bd ul{ overflow:hidden; zoom:1; }
-.picScroll-left .bd ul li{ float:left; _display:inline; overflow:hidden; text-align:center; width:50%;}
-.picScroll-left .bd ul li .pic{ text-align:center;width:96%;margin:0 2%;background:url(../img/sample/1.jpg)no-repeat center top;background-size:100% 100%;position:relative;}
+.index_prs {
+  margin: 0 auto;
+}
 
-.picScroll-left .bd ul li .pic1{ text-align:center;width:100%;background:url(../img/sample/2.jpg)no-repeat center top;background-size:100% 100%;position:absolute;top:0;display:none}
+.picScroll {
+  position: relative;
+}
 
-.picScroll-left .bd ul li .pics img{ width:100%; }
-.picScroll-left .bd ul li .title{ line-height:35px; color:#000;}
+.picScroll .prev, .picScroll .next {
+  position: absolute;
+  display: block;
+  width: 44px;
+  height: 44px;
+  cursor: pointer;
+  top: 50%;
+}
 
+.picScroll .prev, {
+  left: 0;
+}
+
+.picScroll .next {
+  right: 0;
+}
+
+.picScroll-left {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.picScroll-left .hd {
+  overflow: hidden;
+  height: 30px;
+  padding: 0 10px;
+}
+
+.picScroll-left .hd .prev, .picScroll-left .hd .next {
+  display: block;
+  float: right;
+  cursor: pointer;
+  width: 30px;
+  height: 30px
+}
+
+.picScroll-left .hd .prev {
+  background: url(../images/left.png);
+  background-size: 100% 100%;
+  margin-right: 5px;
+}
+
+.picScroll-left .hd .next {
+  background: url(../images/right.png);
+  background-size: 100% 100%;
+}
+
+.picScroll-left .hd ul {
+  float: right;
+  overflow: hidden;
+  zoom: 1;
+  margin-top: 10px;
+  zoom: 1;
+}
+
+.picScroll-left .hd ul li {
+  float: left;
+  width: 9px;
+  height: 9px;
+  overflow: hidden;
+  margin-right: 5px;
+  text-indent: -999px;
+  cursor: pointer;
+  background: #fff;
+  border-radius: 5px
+}
+
+.picScroll-left .hd ul li.on {
+  background-position: 0 0;
+}
+
+.picScroll-left .bd {
+  padding-top: 10px;
+}
+
+.picScroll-left .bd ul {
+  overflow: hidden;
+  zoom: 1;
+}
+
+.picScroll-left .bd ul li {
+  float: left;
+  _display: inline;
+  overflow: hidden;
+  text-align: center;
+  width: 50%;
+}
+
+.picScroll-left .bd ul li .pic {
+  text-align: center;
+  width: 96%;
+  margin: 0 2%;
+  background: url(../img/sample/1.jpg)no-repeat center top;
+  background-size: 100% 100%;
+  position: relative;
+}
+
+.picScroll-left .bd ul li .pic1 {
+  text-align: center;
+  width: 100%;
+  background: url(../img/sample/2.jpg)no-repeat center top;
+  background-size: 100% 100%;
+  position: absolute;
+  top: 0;
+  display: none
+}
+
+.picScroll-left .bd ul li .pics img {
+  width: 100%;
+}
+
+.picScroll-left .bd ul li .title {
+  line-height: 35px;
+  color: #000;
+}
 
 /* 首页底部 */
-
 .sun_footer {
-    position: fixed;
-    z-index: 999;
-    bottom: 0;
-    width: 100%;
-    background: #fff;
-    border-top: 1px solid #DBDBDB;
+  position: fixed;
+  z-index: 999;
+  bottom: 0;
+  width: 100%;
+  background: #fff;
+  border-top: 1px solid #DBDBDB;
 }
+
 .sun_footer li {
-    width: 20%;
-    text-align: center;
-    float: left;
-    padding-top: 5px;
+  width: 20%;
+  text-align: center;
+  float: left;
+  padding-top: 5px;
 }
-.sun_footer .iconfont{
-font-size: 2em;
+
+.sun_footer .iconfont {
+  font-size: 2em;
+}
+
+/* 移动端 头部汉堡菜单 */
+.hamburger.navbar-toggle {
+  position: relative;
+    float: right;
+    border-radius: 3px;
+    height: 66px;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 15px;
+    line-height: 22px;
+    background: 0 0!important;
+    border: 1px solid transparent;
+}
+.navbar-toggle:focus {
+    outline: 0;
+}
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+}
+.hamburger {
+    font-size: 20px;
+    vertical-align: middle;
+}
+.hamburger,
+.hamburger:before,
+.hamburger .hamburger-bar,
+.hamburger:after {
+    transition: transform .2s ease-in-out;
+}
+.hamburger:before,
+.hamburger:after {
+    content: "";
+}
+.hamburger:before,
+.hamburger .hamburger-bar,
+.hamburger:after {
+    display: block;
+    width: 1em;
+    height: .1em;
+    margin: 0;
+    background: #76838f;
+    border-radius: 1px;
+}
+.navbar-default .hamburger:before,
+.navbar-default .hamburger .hamburger-bar,
+.navbar-default .hamburger:after {
+    background: #76838f;
+}
+.navbar-inverse .hamburger:before,
+.navbar-inverse .hamburger .hamburger-bar,
+.navbar-inverse .hamburger:after {
+    background: #fff;
+}
+.hamburger .hamburger-bar {
+    margin: .2em 0;
+}
+.hamburger-close:before {
+    transform: rotate(45deg);
+    transform-origin: 8%;
+}
+.hamburger-close .hamburger-bar {
+    opacity: 0;
+}
+.hamburger-close:after {
+    transform: rotate(-45deg);
+    transform-origin: 8%;
+}
+.hamburger-close.hided:before,
+.hamburger-close.collapsed:before {
+    transform: rotate(0);
+}
+.hamburger-close.hided .hamburger-bar,
+.hamburger-close.collapsed .hamburger-bar {
+    opacity: 1;
+}
+.hamburger-close.hided:after,
+.hamburger-close.collapsed:after {
+    transform: rotate(0);
+}
+.hamburger-arrow-left.collapsed {
+    transform: rotate(180deg);
+}
+.hamburger-arrow-left.collapsed:before {
+    width: .6em;
+    transform: translate3d(.45em, .1em, 0) rotate(45deg);
+}
+.hamburger-arrow-left.collapsed .hamburger-bar {
+    border-radius: .2em;
+}
+.hamburger-arrow-left.collapsed:after {
+    width: .6em;
+    transform: translate3d(.45em, -.1em, 0) rotate(-45deg);
 }
