开发手机首页

--- a/template/default/index/css/yunu.css
+++ b/template/default/index/css/yunu.css
@@ -2511,8 +2511,8 @@ body {
   display: inline-block;
   font-style: normal;
   font-weight: bold;
-  height: 50px;
-  line-height: 50px;
+  height: 2.8em;
+  line-height: 2.8em;
   font-size: 28px;
   text-align: center;
   color: #575757;
