--- a/template/default/index/css/ylyy.css
+++ b/template/default/index/css/ylyy.css
@@ -53,17 +53,17 @@
 .index_title_bg_left{
   display:inline-block;
   vertical-align: top;
-  width: 50px;
-    height: 50px;
-    line-height: 50px;  background:url(../img/sample/title_bg_left.png);
+  width: 2.8em;;
+    height: 2.8em;;
+    line-height: 2.8em;;  background:url(../img/sample/title_bg_left.png);
 background-position: left center;  background-repeat: no-repeat;
 }
 .index_title_bg_right{
   display:inline-block;
   vertical-align: top;
-  width: 50px;
-    height: 50px;
-    line-height: 50px;
+  width: 2.8em;;
+    height: 2.8em;;
+    line-height: 2.8em;;
   background:url(../img/sample/title_bg_right.png);
 background-position: left center;  background-repeat: no-repeat;
 }
